--- a/RESTful-SOAP-Webservice/webapp/WEB-INF/i18n/validation_en_US.properties
+++ b/RESTful-SOAP-Webservice/webapp/WEB-INF/i18n/validation_en_US.properties
@@ -1,15 +1,4 @@
-validate.employee.firstName=The first name is required.
-validate.employee.lastName=The last name is required.
-validate.employee.governmentId=The government ID is required.
-validate.employee.birthDate=The birth date is required.
-validate.employee.gender=The gender is required.
-validate.employee.badgeNumber=The badge number is required.
-validate.employee.address=The address is required.
-validate.employee.city=The city is required.
-validate.employee.state=The state is required.
-validate.employee.phoneNumber=The phone number is required.
-validate.employee.email=The e-mail must be a valid e-mail address.
-validate.employee.department=The department is required.
-validate.employee.location=The location is required.
-validate.employee.division=The division is required.
-validate.employee.position=The position is required.
+validate.accountService.saveAccount.account=You cannot save a null account.
+validate.account.name=The account name is required.
+validate.account.billingAddress=The billing address is required.
+validate.account.phoneNumber=The phone number is required.
